# lambda-container-rust

./: .dockerignore  .gitignore  Cargo.toml  README.md  flake.nix  justfile  pnpm-lock.yaml  rust-toolchain.toml
.cargo/: config.toml
crates/app/: Cargo.toml  justfile
crates/app/cdk_container/: .gitignore  Dockerfile  package.json
crates/app/cdk_container/lib/: cdk-stack.ts
crates/app/cdk_container_private/: Dockerfile  README.md  package-lock.json
crates/app/cdk_container_private/lib/: cdk-stack.ts
crates/app/cdk_musl/: package-lock.json  package.json
crates/app/cdk_musl/lib/: cdk-stack.ts
crates/app/src/: handler.rs  main.rs
scripts/: refresh_aws_creds.py
